--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,13 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #000000;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: "Suit_EB";
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -35,4 +36,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.IntroduceLine{
+  font-family: "Suit_EB";
+
+}
+
+@font-face{
+  font-family: "Suit_EB";
+  src:url("./fonts/SUIT-ExtraBold.ttf");
 }
