--- a/src/App.css
+++ b/src/App.css
@@ -7,21 +7,16 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #000000;
+  background-color: #121212;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: "Suit_EB";
-  font-size: calc(10px + 2vmin);
+  line-height: calc(12px + 6vmin);
+  font-size: calc(8px + 4vmin);
   color: white;
 }
 
@@ -29,21 +24,22 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.IntroduceLine{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Suit_EB";
 }
 
-.IntroduceLine{
-  font-family: "Suit_EB";
-
+.Underline{
+  width: 70%;
+  height: calc(0.5vmin);
+  margin:1px;
+  background-color: #ffffff;
+  display: inline-block;
 }
 
 @font-face{
   font-family: "Suit_EB";
-  src:url("./fonts/SUIT-ExtraBold.ttf");
+  src: url("./fonts/SUIT-ExtraBold.ttf");
 }
