--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  margin: 0;
 }
 
 .App-header {
@@ -16,12 +15,8 @@
   justify-content: center;
   font-family: "Suit_EB";
   line-height: calc(12px + 6vmin);
-  font-size: calc(8px + 4vmin);
+  font-size: calc(4px + 4vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 .IntroduceLine{
