--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+:root{
+  --vh: 100%;  
+}
 .App {
   text-align: center;
 }
@@ -6,6 +9,18 @@ body{
   margin: 0;
 }
 
+.mobile-App-header{
+  background-color: #121212;
+  min-height: calc(var(--vh, 1vh)*100);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: "Suit_EB";
+  line-height: calc(12px + 6vmin);
+  font-size: calc(4px + 4vmin);
+  color: white;
+}
 .App-header {
   background-color: #121212;
   min-height: 100vh;
