--- a/src/Epic_01.css
+++ b/src/Epic_01.css
@@ -12,7 +12,7 @@ body{
 
 .mobile-App-header{
   background-color: #121212;
-  min-height: calc(var(--vh, 1vh)*100);
+  min-height: calc(var(--vh)*100);
   display: flex;
   flex-direction: column;
   align-items: center;
