--- a/src/Epic_01.css
+++ b/src/Epic_01.css
@@ -12,7 +12,7 @@ body{
 
 .mobile-App-header{
   background-color: #121212;
-  min-height: calc(var(--vh)*100);
+  height: calc(var(--vh)*100);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,7 +25,7 @@ body{
 
 .App-header {
   background-color: #121212;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
