--- a/src/Epic_01.css
+++ b/src/Epic_01.css
@@ -6,14 +6,11 @@ body{
   margin: 0;
 }
 
-.App {
-  text-align: center;
-}
-
 .mobile-App-header{
   background-color: #121212;
   height: calc(var(--vh)*100);
   display: flex;
+  text-align: center;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -45,7 +42,7 @@ body{
 
 .Underline{
   width: 70vmin;
-  height: calc(0.5vmin);
+  height: 0.5vmin;
   margin:1px;
   background-color: #ffffff;
   display: inline-block;
