Epic 3 Card End

--- a/src/Epic_02.css
+++ b/src/Epic_02.css
@@ -109,4 +109,12 @@ body{
     src: url("./fonts/SUIT-Bold.ttf");
 }
 
-  
+@font-face{
+    font-family: "Suit_SB";
+    src: url("./fonts/SUIT-SemiBold.ttf");
+} 
+
+@font-face{
+    font-family: "Suit_M";
+    src: url("./fonts/SUIT-Medium.ttf");
+} 
