--- a/src/Epic_03.css
+++ b/src/Epic_03.css
@@ -101,6 +101,7 @@ body{
 
 .Mobile-Card-Image{
     height: 45.9vh;
+    width: calc(72.631vw - 4px);
     border-top-left-radius: 14px;
     border-top-right-radius: 14px;
     border-color:#d9d9d9;
@@ -115,7 +116,7 @@ body{
     margin-bottom: 1.025vh;
     text-align: left;
     font-family: "Suit_B";
-    font-size: 3.33vh;
+    font-size: 6.3vw;
     color:black;
 }
 
