--- a/src/Epic_03.css
+++ b/src/Epic_03.css
@@ -11,7 +11,7 @@ body{
 }
 
 .Browser-Maintext{
-    margin-top: 56px;
+    margin-top: 64px;
     margin-bottom: 56px;
     padding: 0;
     text-align: center;
@@ -124,7 +124,7 @@ body{
     margin-left: 4.21vw;
     text-align: left;
     font-family: "Suit_SB";
-    font-size: 1.53vh;
+    font-size: 3.15vw;
     color: #626262;
 }
 
