--- a/src/Epic_03.css
+++ b/src/Epic_03.css
@@ -10,8 +10,13 @@ body{
     justify-content: center;
 }
 
+.browser-container{
+    width: 100%;
+    height: calc(100vh - 156px);
+}
+
 .Browser-Maintext{
-    margin-top: 64px;
+    margin-top: 56px;
     margin-bottom: 56px;
     padding: 0;
     text-align: center;
@@ -22,12 +27,13 @@ body{
 
 .Browser-Card{
     height: 494px;
-    width: 276px;
+    width: 276px!important;
     border-radius: 16px;
-    margin-bottom: 144px;
+    margin: 0 calc((100% - 276px)/2);
     position: relative;
     background-color: #FCFCFC;
     align-items: center;
+    align-self: center;
 }
 
 .Browser-Card-Image{
@@ -74,6 +80,7 @@ body{
     background-color: #343434;
     position: absolute;
     transition-duration: 0.4s;
+    user-select: none;
 }
 
 .Browser-Card-Detail:active{
@@ -81,6 +88,12 @@ body{
     background-color: #c8c8c8;
     transition: 0.2s;
 }
+
+.mobile-container{
+    width: 100%;
+    height: 81.54vh;;
+}
+
 
 .Mobile-Maintext{
     margin: 7.18vh 0px;
@@ -93,9 +106,9 @@ body{
 
 .Mobile-Card{
     height: 63.33vh;
-    width: 72.631vw;
+    width: 72.631vw!important;
     border-radius: 16px;
-    margin-bottom: 18.46vh;
+    margin: 0 13.6845vw;
     position: relative;
     background-color: #FCFCFC;
     align-items: center;
@@ -145,6 +158,7 @@ body{
     bottom: 1.02vh;
     border-radius: 14px;
     transition-duration: 0.4s;
+    user-select: none;
 }
 
 .Mobile-Card-Detail:active{
