--- a/src/Epic_03.css
+++ b/src/Epic_03.css
@@ -11,7 +11,7 @@ body{
 }
 
 .Browser-Maintext{
-    margin-top: 64px;
+    margin-top: 56px;
     margin-bottom: 56px;
     padding: 0;
     text-align: center;
@@ -74,6 +74,7 @@ body{
     background-color: #343434;
     position: absolute;
     transition-duration: 0.4s;
+    user-select: none;
 }
 
 .Browser-Card-Detail:active{
@@ -145,12 +146,37 @@ body{
     bottom: 1.02vh;
     border-radius: 14px;
     transition-duration: 0.4s;
+    user-select: none;
+    overflow: hidden;
 }
 
 .Mobile-Card-Detail:active{
     animation-fill-mode: forwards;
     background-color: #c8c8c8;
     transition: 0.2s;
+}
+
+.drawer{
+    height: 100%;
+    background: #212121 !important;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+}
+
+.drawer__handle{
+    width: 44px !important;
+    height: 4px !important;
+    margin-top: 1.53vh;
+    background: #383838 !important;
+}
+
+.drawer__handle-wrapper{
+    border: 2px solid #383838 !important;
+    border-top-left-radius: 14px;
+    border-top-right-radius: 14px;
+    width: calc(100% - 4px) !important;
+    height: 7.43vh !important;
+    padding: 0px !important;
 }
 
 @font-face{
