--- a/src/Epic_03.css
+++ b/src/Epic_03.css
@@ -167,6 +167,29 @@ body{
     transition: 0.2s;
 }
 
+.drawer{
+    height: calc(var(--vh)*100);
+    background: #212121 !important;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+}
+
+.drawer__handle{
+    width: 44px !important;
+    height: 4px !important;
+    margin-top: 1.53vh;
+    background: #383838 !important;
+}
+
+.drawer__handle-wrapper{
+    border: 2px solid #383838 !important;
+    border-top-left-radius: 14px;
+    border-top-right-radius: 14px;
+    width: calc(100% - 4px) !important;
+    height: 7.43vh !important;
+    padding: 0px !important;
+}
+
 @font-face{
     font-family: "Suit_B";
     src: url("./fonts/SUIT-Bold.ttf");
