Epic 4 outlook End

--- a/src/Epic_03.css
+++ b/src/Epic_03.css
@@ -176,7 +176,7 @@
 }
 
 .drawer__handle-wrapper{
-    border: 2px solid #383838 !important;
+    border-bottom: 2px solid #383838 !important;
     border-top-left-radius: 14px;
     border-top-right-radius: 14px;
     width: calc(100% - 4px) !important;
