--- a/src/Epic_03.css
+++ b/src/Epic_03.css
@@ -77,6 +77,42 @@
     transition: 0.2s;
 }
 
+.Browser__drawer{
+    height: 100%!important;
+    width: 380px !important;
+    left: calc(50% - 190px) !important;
+    background: #212121 !important;
+    border-top-left-radius: 16px !important;
+    border-top-right-radius: 16px !important;
+    overflow: auto !important;
+}
+
+.Browser__drawer::-webkit-scrollbar{
+    display: none;
+}
+
+.Browser__drawer__content{
+    margin: auto !important;
+    padding: 0px !important;
+    max-height: fit-content !important;
+}
+
+.Browser__drawer__handle{
+    width: 44px !important;
+    height: 4px !important;
+    margin-top: 1.53vh;
+    background: #383838 !important;
+}
+
+.Browser__drawer__handle-wrapper{
+    border-bottom: 2px solid #383838 !important;
+    border-top-left-radius: 14px !important;
+    border-top-right-radius: 14px !important;
+    width: 100%;
+    height: 7.43vh !important;
+    padding: 0px !important;
+}
+
 .mobile-container{
     width: 100%;
     height: 81.54vh;
@@ -158,9 +194,13 @@
 .drawer{
     height: calc(var(--vh)*100) !important;
     background: #212121 !important;
-    border-top-left-radius: 16px;
-    border-top-right-radius: 16px;
+    border-top-left-radius: 16px !important;
+    border-top-right-radius: 16px !important;
     overflow: auto !important;
+}
+
+.drawer::-webkit-scrollbar{
+    display: none;
 }
 
 .drawer__content{
@@ -177,9 +217,8 @@
 
 .drawer__handle-wrapper{
     border-bottom: 2px solid #383838 !important;
-    border-top-left-radius: 14px;
-    border-top-right-radius: 14px;
-    width: calc(100% - 4px) !important;
+    border-top-left-radius: 14px !important;
+    border-top-right-radius: 14px !important;
     height: 7.43vh !important;
     padding: 0px !important;
 }
