--- a/src/Epic_04.css
+++ b/src/Epic_04.css
@@ -1,7 +1,96 @@
+.Browser-MainTitle{
+    text-align: center;
+    font-family: "Suit_B";
+    font-size: 28px;
+    margin: 32px auto;
+    color: white;
+}
+
+.Browser-container{
+    width: 100%;
+    height: fit-content;
+}
+
+.Browser-SubTitle{
+    font-family: "Suit_B";
+    font-size: 20px;
+    margin: 40px;
+    margin-bottom: 16px;
+    color: white;
+}
+
+.Browser-TextLine{
+    font-family: "Suit_R";
+    font-size: 16px;
+    margin: 0 40px 40px;
+    color: white;
+}
+
+.Browser-SplitLine{
+    width: 300px;
+    height: 2px;
+    margin: 0px auto;
+    align-self: center;
+    background-color: #383838;
+}
+
+.Browser-Navigator{
+    width: 100%;
+    height: 74px;
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    justify-content: center;
+}
+
+.Browser-Navigator-Area{
+    width: auto;
+    height: inherit;
+    display: flex;
+    user-select: none;
+}
+
+.Browser-Navigator-Middlebar{
+    width: 2px;
+    height: 44px;
+    margin: 18px 16px 12px;
+    background-color: #383838;
+}
+
+.Browser-Navigator-Arrow{
+    width: 28px;
+    height: 28px;
+    margin: 22px 8px 24px 12px;
+}
+
+.Browser-Navigator-TextLine{
+    width: 125px;
+    height: auto;
+    vertical-align: auto;
+}
+
+.Browser-Navigator-TextLine-label{
+    width: inherit;
+    margin: 16px 0 2px 0;
+    font-family: "Suit_B";
+    font-size: 12px;   
+    color: #878987; 
+}
+
+.Browser-Navigator-TextLine-Title{
+    width: inherit;
+    margin: 0;
+    font-family: "Suit_B";
+    font-size: 16px;   
+    color: white; 
+}
+
+/*  */
+
 .Mobile-MainTitle{
     text-align: center;
     font-family: "Suit_B";
-    font-size: 8.421vw;
+    font-size: 7.368vw;
     margin: 4.102vh auto;
     color: white;
 }
@@ -47,6 +136,7 @@
     width: auto;
     height: inherit;
     display: flex;
+    user-select: none;
 }
 
 .Mobile-Navigator-Middlebar{
