--- a/src/Epic_04.css
+++ b/src/Epic_04.css
@@ -51,8 +51,9 @@
 }
 
 .Browser-Navigator-Middlebar{
-    width: 2px;
     height: 44px;
+    width: 2px;
+    padding: 0px;
     margin: 18px 16px 12px;
     background-color: #383838;
 }
