--- a/src/Epic_04.css
+++ b/src/Epic_04.css
@@ -1,176 +1,178 @@
-.Browser-MainTitle{
+.background{
+    background-color: #121212;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.Browser-Maintext{
+    height: 40px;
+    margin: 56px;
+    padding: 0;
     text-align: center;
-    font-family: "Suit_B";
-    font-size: 28px;
-    margin: 32px auto;
+    font-family: "Suit_EB";
+    font-size: 32px;
     color: white;
 }
 
-.Browser-container{
-    width: 100%;
-    height: fit-content;
+.Browser-Represent-Image{
+    width: 92px;
+    height: 92px;
+    margin : 0;
 }
 
-.Browser-SubTitle{
-    font-family: "Suit_B";
-    font-size: 20px;
-    margin: 40px;
-    margin-bottom: 16px;
+.Browser-Name{
+    height: 24px;
+    margin-top: 24px;
+    text-align: center;
+    font-family: "Suit_SB";
+    font-size: 24px;
     color: white;
 }
 
-.Browser-TextLine{
-    font-family: "Suit_R";
+.Browser-Job{
+    height: 20px;
+    margin-top: 8px;
+    margin-bottom: 36px;
+    text-align: center;
+    font-family: "Suit_M";
     font-size: 16px;
-    margin: 0 40px 40px;
     color: white;
 }
 
-.Browser-SplitLine{
-    width: 300px;
-    height: 2px;
-    margin: 0px auto;
-    align-self: center;
-    background-color: #383838;
-}
-
-.Browser-Navigator{
-    width: 100%;
-    height: 74px;
-    margin: 0px;
-    padding: 0px;
-    display: flex;
-    justify-content: center;
-}
-
-.Browser-Navigator-Area{
-    width: auto;
-    height: inherit;
-    display: flex;
-    user-select: none;
-}
-
-.Browser-Navigator-Middlebar{
-    height: 44px;
-    width: 2px;
-    padding: 0px;
-    margin: 18px 16px 12px;
-    background-color: #383838;
-}
-
-.Browser-Navigator-Arrow{
-    width: 28px;
-    height: 28px;
-    margin: 22px 8px 24px 12px;
-}
-
-.Browser-Navigator-TextLine{
-    width: 125px;
-    height: auto;
-    vertical-align: auto;
-}
-
-.Browser-Navigator-TextLine-label{
-    width: inherit;
-    margin: 16px 0 2px 0;
-    font-family: "Suit_B";
-    font-size: 12px;   
-    color: #878987; 
-}
-
-.Browser-Navigator-TextLine-Title{
-    width: inherit;
-    margin: 0;
-    font-family: "Suit_B";
-    font-size: 16px;   
-    color: white; 
-}
-
-/*  */
-
-.Mobile-MainTitle{
-    text-align: center;
-    font-family: "Suit_B";
-    font-size: 7.368vw;
-    margin: 4.102vh auto;
-    color: white;
-}
-
-.Mobile-container{
-    width: 100%;
+.Browser-Icon-Area{
+    width: 312px;
     height: fit-content;
-}
-
-.Mobile-SubTitle{
-    font-family: "Suit_B";
-    font-size: 5.263vw;
-    margin: 10.526vw;
-    margin-bottom: 2.051vh;
-    color: white;
-}
-
-.Mobile-TextLine{
-    font-family: "Suit_R";
-    font-size: 4.21vw;
-    margin: 0 10.526vw 10.526vw;
-    color: white;
-}
-
-.Mobile-SplitLine{
-    width: 78.947vw;
-    height: 2px;
-    margin: 0px auto;
-    align-self: center;
-    background-color: #383838;
-}
-
-.Mobile-Navigator{
-    width: 100%;
-    height: 9.487vh;
+    padding: 0 0px 60px;
     margin: 0px;
-    padding: 0px;
-    display: flex;
-    justify-content: center;
 }
 
-.Mobile-Navigator-Area{
-    width: auto;
-    height: inherit;
-    display: flex;
-    user-select: none;
+.Browser-Icon-Area-Name{
+    height: 16px;
+    margin: 0 auto 8px 4px;
+    text-align: left;
+    font-size: 12px;
+    font-family: "Suit-M";
+    color: white;
 }
 
-.Mobile-Navigator-Middlebar{
-    width: 2px;
-    height: 5.641vh;
-    margin: 2.307vh 4.21vw auto;
-    background-color: #383838;
+.Browser-Icon-Area-Splitline{
+    width: 100%;
+    height: 1px;
+    margin: 0px;
+    background-color: #D9D9D9;
 }
 
-.Mobile-Navigator-Arrow{
-    width: 7.368vw;
-    height: 7.368vw;
-    margin: 2.82vh 2.105vw auto 3.157vw;
+.Browser-Skillbox-icon{
+    width: 48px;
+    height: 48px;
+    margin: 12px 0 0 12px;
 }
 
-.Mobile-Navigator-TextLine{
-    width: calc((66.32vw - 2px)/2);
-    height: auto;
-    vertical-align: auto;
+.Browser-Contact-icon{
+    width: 36px;
+    height: 36px;
+    margin: 12px 0 0 16px;
 }
 
-.Mobile-Navigator-TextLine-label{
-    width: inherit;
-    margin: 2.051vh 0 0.256vh 0;
-    font-family: "Suit_B";
-    font-size: 3.157vw;   
-    color: #878987; 
+.Browser-Contact-icon:hover{
+    filter: brightness(140%);
 }
 
-.Mobile-Navigator-TextLine-Title{
-    width: inherit;
-    margin: 0;
-    font-family: "Suit_B";
-    font-size: 4.21vw;   
-    color: white; 
+.Browser-Hyperlink-Text{
+    height: 16px;
+    margin: 34px auto 36px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 12px;
+    font-family: "Suit-M";
+    color: white;
+}
+
+/* -------- */
+
+.Mobile-Maintext{
+    height: 5.128vh;
+    margin: 7.179vh;
+    padding: 0;
+    text-align: center;
+    font-family: "Suit_EB";
+    font-size: 4.102vh;
+    color: white;
+}
+
+.Mobile-Represent-Image{
+    width: 11.794vh;
+    height: 11.794vh;
+    margin : 0;
+}
+
+.Mobile-Name{
+    height: 3.076vh;
+    margin-top: 3.076vh;
+    text-align: center;
+    font-family: "Suit_SB";
+    font-size: 3.076vh;
+    color: white;
+}
+
+.Mobile-Job{
+    height: 2.564vh;
+    margin-top: 1.025vh;
+    margin-bottom: 4.615vh;
+    text-align: center;
+    font-family: "Suit_M";
+    font-size: 2.051vh;
+    color: white;
+}
+
+.Mobile-Icon-Area{
+    width: 82.105vw;
+    height: fit-content;
+    padding: 0px 0px 7.692vh;
+    margin: 0px;
+}
+
+.Mobile-Icon-Area-Name{
+    height: 2.051vh;
+    margin: 0 auto 1.025vh 1.052vw;
+    text-align: left;
+    font-size: 1.538vh;
+    font-family: "Suit-M";
+    color: white;
+}
+
+.Mobile-Icon-Area-Splitline{
+    width: 100%;
+    height: 1px;
+    margin: 0px;
+    background-color: #D9D9D9;
+}
+
+.Mobile-Skillbox-icon{
+    width: 6.153vh;
+    height: 6.153vh;
+    margin: 1.538vh 0 0 3.157vw;
+}
+
+.Mobile-Contact-icon{
+    width: 4.615vh;
+    height: 4.615vh;
+    margin: 1.538vh 0 0 4.21vw;
+}
+
+.Mobile-Contact-icon:hover{
+    filter: brightness(140%);
+}
+
+.Mobile-Hyperlink-Text{
+    height: 2.051vh;
+    margin: 4.102vh auto 4.615vh;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1.538vh;
+    font-family: "Suit-M";
+    color: white;
 }
